# release

./: CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh  release.toml
.github/workflows/: installer-smoke.yml  release.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: cargo.rs  command.rs  generic.rs  jsr.rs  lib.rs  npm.rs
crates/adapters/src/npm/: manifest.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  self_update.rs
crates/cli/tests/: e2e.rs  init_npm_inline_build.rs  publish_flow.rs  version_flow.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  build.rs  changelog.rs  check.rs  config.rs  config_cmd.rs  date.rs  discover.rs  forge.rs  git.rs  github_release.rs  graph.rs  hooks.rs  init.rs  lib.rs  matrix.rs  preflight.rs  prompt.rs  publish.rs  review.rs  snapshot.rs  summary.rs  ui.rs  update.rs  upgrade.rs  version.rs
docs/: README.md  architecture.md  changelog-format.md  ci-workflow.md  configuration.md  implementation-plan.md  preflight.md  roadmap.md
docs/adapters/: cargo.md  generic.md  npm.md  overview.md
docs/commands/: check.md  config.md  github-release.md  init.md  matrix-build.md  publish.md  self-update.md  snapshot.md  upgrade.md  version.md
