[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/adapters",
    "crates/cli",
]

# Shared metadata + dependency versions for every crate in the workspace.
# Individual crates inherit these with `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Open-Tech-Foundation/release"
rust-version = "1.80"
authors = ["OTF Contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
inquire = "0.7"
ureq = { version = "2", features = ["json"] }
serde_json = "1"

# Internal crates, referenced by path so the workspace builds standalone.
otf-release-core = { path = "crates/core" }
otf-release-adapters = { path = "crates/adapters" }
