[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/adapters",
    "crates/cli",
]

# Shared metadata + dependency versions for every crate in the workspace.
# Individual crates inherit these with `field.workspace = true`.
[workspace.package]
version = "0.28.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Open-Tech-Foundation/release"
# 1.82 is the floor: the cargo adapter's publish path shells out to `cargo info`, stabilized in
# cargo 1.82.
rust-version = "1.82"
authors = ["OTF Contributors"]

[workspace.dependencies]
anyhow = "1"
anstream = "1"
anstyle = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
inquire = "0.7"
ratatui = "0.30.1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
# Build-only release packaging: tar.gz / zip archives + SHA-256 checksums.
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"

# Internal crates, referenced by path so the workspace builds standalone.
otf-release-core = { path = "crates/core" }
otf-release-adapters = { path = "crates/adapters" }
