[package]
name = "opentf-release-adapters"
description = "Registry adapters (npm in v1) for the OpenTF release CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
opentf-release-core.workspace = true
