[package]
name = "otf-release"
description = "Curated-changelog, manual-bump release CLI for polyglot monorepos."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["release", "monorepo", "changelog", "publishing", "cli"]
categories = ["command-line-utilities", "development-tools"]

# The published crate is `otf-release`; the binary on PATH is `otf-release`.
[[bin]]
name = "otf-release"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
otf-release-core.workspace = true
otf-release-adapters.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"
