[package]
name = "opentf-release-core"
description = "Ecosystem-agnostic release orchestration for the OpenTF release CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
