[package]
name = "otf-release-core"
description = "Ecosystem-agnostic release orchestration for the OTF release CLI."
publish = false  # internal library; we ship only the `otf-release` binary via GitHub Releases
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
inquire.workspace = true
ratatui.workspace = true

[dev-dependencies]
tempfile = "3"
