[package]
name = "otf-release-core"
description = "Ecosystem-agnostic release orchestration for the OTF release CLI."
publish = false  # internal library; we ship only the `otf-release` binary via GitHub Releases
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
inquire.workspace = true
ratatui.workspace = true
brotli = "7"
glob = "0.3"
flate2.workspace = true
tar.workspace = true
zip.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
yaml-rust2 = "0.11.0"
